fix hero blink on mobile

--- a/src/conferences/jsn/sass/partials/_hero.sass
+++ b/src/conferences/jsn/sass/partials/_hero.sass
@@ -170,9 +170,6 @@
 					margin-left: 3px
 					animation: blinkTypewriter 1000ms infinite normal
 
-					+sm
-						display: none
-
 	&__sticky
 		position: absolute
 		bottom: 2%
